wip(mb-scheduler): attempt at making nginx work

--- a/cluster/apps/mb-scheduler/mb-scheduler-backend/deployment.yaml
+++ b/cluster/apps/mb-scheduler/mb-scheduler-backend/deployment.yaml
@@ -45,8 +45,8 @@ spec:
             - name: static-folder
               mountPath: /static/
             - name: nginx-config
-              mountPath: etc/nginx/test
-              subPath: default
+              mountPath: etc/nginx/conf.d/
+              subPath: default.conf
 
       imagePullSecrets:
         - name: ghcr-login-secret
