--- a/cluster/apps/mb-scheduler/mb-scheduler-backend/deployment.yaml
+++ b/cluster/apps/mb-scheduler/mb-scheduler-backend/deployment.yaml
@@ -45,7 +45,7 @@ spec:
             - name: static-folder
               mountPath: /static/
             - name: nginx-config
-              mountPath: etc/nginx/conf.d/
+              mountPath: /etc/nginx/conf.d/default.conf
               subPath: default.conf
 
       imagePullSecrets:
