wip(mb-scheduler): yet attempt at making nginx work

--- a/cluster/apps/mb-scheduler/mb-scheduler-backend/deployment.yaml
+++ b/cluster/apps/mb-scheduler/mb-scheduler-backend/deployment.yaml
@@ -45,8 +45,7 @@ spec:
             - name: static-folder
               mountPath: /static/
             - name: nginx-config
-              mountPath: /etc/nginx/conf.d/default.conf
-              subPath: default.conf
+              mountPath: /etc/nginx/conf.d/
 
       imagePullSecrets:
         - name: ghcr-login-secret
