--- a/cluster/apps/mb-scheduler/mb-scheduler-backend/configmap.yaml
+++ b/cluster/apps/mb-scheduler/mb-scheduler-backend/configmap.yaml
@@ -4,7 +4,7 @@ metadata:
   name: mb-scheduler-backend-nginx-conf
   namespace: mb-scheduler
 data:
-  nginx.conf: |-
+  default.conf: |-
     upstream django {
         server django:8000;
     }
