--- a/cluster/apps/mb-scheduler/mb-scheduler-backend/configmap.yaml
+++ b/cluster/apps/mb-scheduler/mb-scheduler-backend/configmap.yaml
@@ -6,7 +6,7 @@ metadata:
 data:
   default.conf: |-
     upstream mb-scheduler-backend {
-        server django:8000;
+        server 127.0.0.1:8000;
     }
     
     server {
