--- a/cluster/apps/mb-scheduler/mb-scheduler-backend/configmap.yaml
+++ b/cluster/apps/mb-scheduler/mb-scheduler-backend/configmap.yaml
@@ -7,17 +7,43 @@ data:
   default.conf: |-
     upstream mb-scheduler-backend {
         server 127.0.0.1:8000;
-    }
+    }  
     
     server {
             listen 80;
             listen [::]:80;
             server_name _;
     
-            location /static {
-                #autoindex on;
-                alias /static/;
-            }
+        # Increase timeout to 5 minutes
+        proxy_read_timeout 300;
+        proxy_connect_timeout 300;
+        proxy_send_timeout 300;
+
+        client_max_body_size 0;
     
+        location /static {
+            #autoindex on;
+            alias /static/;
+        }
+    
+        location / {
+            try_files $uri @proxy_to_app;
+        }
+    
+        location @proxy_to_app {
             proxy_pass http://mb-scheduler-backend;
+    
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+    
+            proxy_redirect off;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Host $server_name;
+        }
+    
+        error_page 497 https://$host:$server_port$request_uri;
     }
+    
