--- a/cluster/apps/mb-scheduler/mb-scheduler-backend/deployment.yaml
+++ b/cluster/apps/mb-scheduler/mb-scheduler-backend/deployment.yaml
@@ -21,9 +21,9 @@ spec:
         - name: django
           image: ghcr.io/shadyf/mb-backend:v1.0.1
           imagePullPolicy: IfNotPresent
-          ports:
-            - protocol: TCP
-              containerPort: 8000
+#          ports:
+#            - protocol: TCP
+#              containerPort: 8000
           env:
             - name: DEBUG
               value: "False"
@@ -34,7 +34,7 @@ spec:
                 name: mb-scheduler-backend-secrets
           volumeMounts:
             - name: static-folder
-              mountPath: /static/
+              mountPath: /app/staticfiles
         # NGINX container to server static files
         - name: nginx
           image: nginx:1.25.2
