fix(mb-scheduler): fix incorrect redis url

--- a/cluster/apps/mb-scheduler/mb-scheduler-worker/deployment.yaml
+++ b/cluster/apps/mb-scheduler/mb-scheduler-worker/deployment.yaml
@@ -20,11 +20,6 @@ spec:
       initContainers:
         - name: wait-for-database
           image: ghcr.io/shadyf/mb-backend:v1.0.2
-          env:
-            - name: DEBUG
-              value: "False"
-            - name: CELERY_BROKER_URL
-              value: redis://redis.mb-scheduler.svc.cluster.local:6379
           envFrom:
             - secretRef:
                 name: mb-scheduler-backend-secrets
@@ -38,7 +33,7 @@ spec:
             - name: DEBUG
               value: "False"
             - name: CELERY_BROKER_URL
-              value: redis://redis.mb-scheduler.svc.cluster.local:6379
+              value: redis://mb-scheduler-redis.mb-scheduler.svc.cluster.local:6379
           envFrom:
             - secretRef:
                 name: mb-scheduler-backend-secrets
@@ -50,7 +45,7 @@ spec:
             - name: DEBUG
               value: "False"
             - name: CELERY_BROKER_URL
-              value: redis://redis.mb-scheduler.svc.cluster.local:6379
+              value: redis://mb-scheduler-redis.mb-scheduler.svc.cluster.local:6379
           envFrom:
             - secretRef:
                 name: mb-scheduler-backend-secrets
