fix(mb-scheduler): adjust env vars for backend

--- a/cluster/apps/mb-scheduler/mb-scheduler-backend/secrets.enc.yaml
+++ b/cluster/apps/mb-scheduler/mb-scheduler-backend/secrets.enc.yaml
@@ -4,34 +4,38 @@ metadata:
     name: mb-scheduler-backend-secrets
     namespace: mb-scheduler
 stringData:
-    DATABASE_URL: ENC[AES256_GCM,data:c3V1JcLWXHkgNAlkUqWQ+M8YgTiA6eUqOOO0V2B9M2ar4qCi9E2pB4y+C5vBpOnxIfk0BpZfxlQQGmHI+xbiFOTZ8voMeCGmJArYihTpyXOK61GIy1dm/2iwFSpg5Hrr0sgWnSiEZXfuHaElxPyiWg==,iv:BkOXJSSyb9195pqCKQzitxpuFYKoxMMFI11eUo88+Ys=,tag:fFuAJdilbC71yi/Metk4ug==,type:str]
-    MB_USERNAME: ENC[AES256_GCM,data:z+/t5pduH7XcAXUVjE3PayADoes=,iv:bmK/nhw/32UilIJ2js9FXA2sRQ9d+Z+2XdYl235e5d8=,tag:tkqdHSVO7FHXUCXIbIbWzg==,type:str]
-    MB_PASSWORD: ENC[AES256_GCM,data:7nBDhRHHye26xutPQxfBiSquyVY=,iv:50/3lEcOWnhUfVbqPZAQ+FSE700z8S5GxqxZ4wruoIc=,tag:K7aQP3EE7OQU+T5U3MxJiw==,type:str]
+    DATABASE_URL: ENC[AES256_GCM,data:9Lt+S0b9FYpAMj0Mc1Bwhse+cQQyUdnqh0MKfxHSbjFTClHjY492uj/2I9ib41wsok1q0YzhPqsNZaeVnlxTlN4VHhrbi4jxTBVS4plKWHZTNpGmXsn0SNHh1394xVlxtCa/Bl4VwVZNOkB2pd+Z3Q==,iv:N/bIutpu/BSXh93e/pZBM/NEH6O3WWvfsn3AD+sBOX8=,tag:VqQv6NnyYjk+DR4dXrrAsA==,type:str]
+    MB_USERNAME: ENC[AES256_GCM,data:DsnGc/l8XEcL6pjUZoDVBcLxa8I=,iv:VLxCiaDmvtZ5gykNF86jKjtB7NvG5RY0hYQThhD5I34=,tag:KzhT3X8NcD8wlaMWqZTwVw==,type:str]
+    MB_PASSWORD: ENC[AES256_GCM,data:H4g+FP5Z0MCN3m7XvsKQbRnTUB8=,iv:DBG/6rVSWzQy+2rW3PntswoxDqhiMC4KjC5e6Z1bXB0=,tag:Ir0vgnOv3uFfkRPa0uhksw==,type:str]
+    SECRET_KEY: ENC[AES256_GCM,data:ku1s/tJix0RhYMWHdGfO+hbw7uUCZ9+dLEvmvTU5au41McggoWcKyuIX8QLpPCBFQYcs0wTrRIvzWx1DKODzLQ==,iv:A+mQ7MYKFAkh95QKbGaEIbw5GqthA+0IQK+YA5nDl3k=,tag:uM4OML3or+mSxb7u0rFhGA==,type:str]
+    ALLOWED_HOSTS: ENC[AES256_GCM,data:VA==,iv:tgLKPjx1bqZubjR2FFwTyGrSp5WvBRtBCamVoRojwKA=,tag:doCbxO4khp729z/+N2ra8w==,type:str]
+    CORS_ALLOWED_ORIGINS: ENC[AES256_GCM,data:CHIOFbKp7aLFr3SfOwt5MYGLPH9J,iv:5lFRmDDHFMZOi1patlT08/R4BKmtRhgFFotqs3Knxig=,tag:FJExlkzDFGp1SQNMhJKdVg==,type:str]
+    CSRF_TRUSTED_ORIGINS: ENC[AES256_GCM,data:qQaLJUZ/q3bpZeg/76yoIg/KEo9O,iv:yLRaVI8ckw3GzAfZuMh7QZQYADJvuhPhzgMjYjx3TQk=,tag:y7weuoV0TGJkM+z+uLZovg==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-09-21T21:10:54Z"
-    mac: ENC[AES256_GCM,data:tGBdUzc1GQcyT+c2f937sjxSdD1x38yx0DckUBEutWSjW2HSSOeeXSvEiji0OBfufi4SVYyYLpGZH8T9xdbauwozSAyyTC7aknr2jDmcRSL6Hv+ylUTk058qoK5STBkUugooZOQeozCWA+fEYAG5lIgRBXkO2M4DneWrEimzp74=,iv:QHLaUhe0e9AG7JAt5Wp+jBwubLyq3jNXx2SeLU0rplg=,tag:m/OFU0DShChWhoWMM5anOw==,type:str]
+    lastmodified: "2023-09-22T12:23:15Z"
+    mac: ENC[AES256_GCM,data:T+0fvBJKndguuz6qwuRW/jGHHf9qNRxBApeGnvEF3hTbAUhl9NgzkTDMWz+Ufnpw0rga9W+pscQiInDRu86kvfZ27GzcIdnrnpH8FwzjMw4KuK4BTufCSyKEPtdKaQWDiqCBhhme4KYYjr3Urbz48a469+PVGP9Nzv/qb5kfYcI=,iv:M3gcgNbTmb/T8CCta1Z6LSpM4Xpsh9QFF0aCl82Tam4=,tag:xTCLSbT7dVP+eDoRliKJ4Q==,type:str]
     pgp:
-        - created_at: "2023-09-21T21:10:54Z"
+        - created_at: "2023-09-22T12:23:15Z"
           enc: |-
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv/cGiQBu1sVo/YQCLqVGQ5lyQBOsbO+0of7nCKrBHc0U31
-            wnN5k5m66x7CZlOFA4Uhq0gUDHCs6Cv6vlnIQMiF8ftFkaXN/hjjKppu6bUCvYiD
-            HyHSDYcNF4elDHaEUFRx8Tceqmv33VoDGi0hhTC37Fq4qg8vItzEZYiqQcD+WaVA
-            KZ+LmOO18uK6yMR/zmnUK+Y1STsXQmNgvDG9HWEthgjRjvdk3PJj2Rwk0+2F8+9c
-            uFselOCOO6xefpU6vqNJ1v5VCYX5CBJG0ryYTHbbNiBU9YNkijOGy1A+r5Tr7l4c
-            CR+ikF2ooeaKfVT6PTOe88POK/tpNy7ToW63kXWepMx6rWAGAsZml7yQI2duIInr
-            /YxX/VvWaqkHFS2lAoCZfm1LyXTy/t0xe3TzeiYivi5R3jHdyd0NfPfHTY2dmvzq
-            a5nKjlthliozAgOXgkV1IB+QuzTYVoyraZ/ZBiQWxtvaj0Tnnrmr7E70JEg64SW0
-            5Y5HqXb1tD6h7zZxK16r0l4BPoI1irkNamttMfHhfGmBsOj/WP9l/47430INqac6
-            vGHu8B0bbAJ2c+twwjWtOvxxtwVVug/Hz3ip8ycnU+NqR2FU8Xg5b5CuHX8bfdTV
-            s06sNRiZ06zMOMBtV+iU
-            =xN4M
+            hQGMA71EESEn7N2iAQv/S8a3wfzX1w/fs9vdT0FHJ0QTtwhstATjbxTYtfaT8h4K
+            rNkJpbbMvsodMSgWCJ6TnFgaZ/2ea5kDJ1OXYlMW9Yurj6DSlxytJMrXlhvQt3Br
+            MEkeaXEF5U54yXtEUZ03Rk0PSJ2y6Sl2KTOsI+d4GWeOUqtg5wNZpClOFM3Hxx8V
+            NVvZN0PyVXfpBYg8pbLnYtroiW7f1o9s/HFq0T+xFu+3g5199y2YjMoxhjoFaB7n
+            ogVVwcGbPhTX7OuV4IKwARrrs6Kt8vCGSsxvIKqP8Vga5E7lA9bfeNM/ZAhehbtn
+            SvuXCR8tnqtvEkZHPrgBrBl8fr6IicXqY+bqsZXxVeTwD8wvfM8vCqTt0eFIKaUx
+            V7QjiZ9BdM4sMZ/vpFFEq+tOHNlr0Rs0bzFN3rjHFN9xP2T73PmYK3JmRmF2crrh
+            b1pfEeRm+QD17N0yz/IwnOtPG0r0x/X1O261lBiThghr4nJEmV60G2XxmYr63DOh
+            xd38ackXBeyyZVtPT0bj0l4BdQOaJNoCexjHeE0NGZLG9DJA8LN6El7UO+AI175X
+            unZCP/JcnAC2ybHhCqEWQz/J6KhAifsbGAbDi6SRRg3magJRa44s93wyXLXwh+Rg
+            7kAOvBDpmuBiDwZfDlrX
+            =KvH+
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
