fix(mb-scheduler): make mb-scheduler use mb-scheduler wildcard certificate

--- a/cluster/apps/mb-scheduler/mb-scheduler-backend/ingress.yaml
+++ b/cluster/apps/mb-scheduler/mb-scheduler-backend/ingress.yaml
@@ -22,3 +22,4 @@ spec:
   tls:
     - hosts:
         - "api.mb-scheduler.${SECRET_DOMAIN}"
+    - secretName: "mb-scheduler-${SECRET_DOMAIN/./-}-tls"
