--- a/cluster/apps/mb-scheduler/mb-scheduler-frontend/ingress.yaml
+++ b/cluster/apps/mb-scheduler/mb-scheduler-frontend/ingress.yaml
@@ -22,4 +22,4 @@ spec:
   tls:
     - hosts:
         - "app.mb-scheduler.${SECRET_DOMAIN}"
-    - secretName: "mb-scheduler-${SECRET_DOMAIN/./-}-tls"
+      secretName: "mb-scheduler-${SECRET_DOMAIN/./-}-tls"
