fix(mb-scheduler): attempt at making mb-scheduler wildcard work

--- a/cluster/apps/mb-scheduler/mb-scheduler-certificate.yaml
+++ b/cluster/apps/mb-scheduler/mb-scheduler-certificate.yaml
@@ -11,3 +11,4 @@ spec:
   commonName: "*.mb-scheduler.${SECRET_DOMAIN}"
   dnsNames:
     - "*.mb-scheduler.${SECRET_DOMAIN}"
+    - "mb-scheduler.${SECRET_DOMAIN}"
