fix(mb-scheduler): change namespace of mb-scheduler certificate

--- a/cluster/apps/mb-scheduler/mb-scheduler-certificate.yaml
+++ b/cluster/apps/mb-scheduler/mb-scheduler-certificate.yaml
@@ -2,7 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: "mb-scheduler-${SECRET_DOMAIN/./-}"
-  namespace: networking
+  namespace: mb-scheduler
 spec:
   secretName: "mb-scheduler-${SECRET_DOMAIN/./-}-tls"
   issuerRef:
