fix(mb-scheduler): attempt at making mb-scheduler work with cloudflare

--- a/cluster/apps/mb-scheduler/mb-scheduler-backend/ingress.yaml
+++ b/cluster/apps/mb-scheduler/mb-scheduler-backend/ingress.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   ingressClassName: "nginx"
   rules:
-    - host: "api.mb-scheduler.${SECRET_DOMAIN}"
+    - host: "api-mb-scheduler.${SECRET_DOMAIN}"
       http:
         paths:
           - pathType: Prefix
@@ -21,5 +21,5 @@ spec:
                   number: 80
   tls:
     - hosts:
-        - "api.mb-scheduler.${SECRET_DOMAIN}"
-      secretName: "mb-scheduler-${SECRET_DOMAIN/./-}-tls"
+        - "api-mb-scheduler.${SECRET_DOMAIN}"
+      secretName: "api-mb-scheduler-${SECRET_DOMAIN/./-}-tls"
