--- a/cluster/apps/mb-scheduler/mb-scheduler-frontend/ingress.yaml
+++ b/cluster/apps/mb-scheduler/mb-scheduler-frontend/ingress.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   ingressClassName: "nginx"
   rules:
-    - host: "app.mb-scheduler.${SECRET_DOMAIN}"
+    - host: "app-mb-scheduler.${SECRET_DOMAIN}"
       http:
         paths:
           - pathType: Prefix
@@ -21,5 +21,5 @@ spec:
                   number: 80
   tls:
     - hosts:
-        - "app.mb-scheduler.${SECRET_DOMAIN}"
-      secretName: "mb-scheduler-${SECRET_DOMAIN/./-}-tls"
+        - "app-mb-scheduler.${SECRET_DOMAIN}"
+      secretName: "app-mb-scheduler-${SECRET_DOMAIN/./-}-tls"
