--- a/cluster/apps/monitoring/loki/loki-helm-release.yaml
+++ b/cluster/apps/monitoring/loki/loki-helm-release.yaml
@@ -24,15 +24,19 @@ spec:
       retries: 3
   values:
     # https://grafana.com/docs/loki/latest/configuration/#configuration-file-reference
+    singleBinary:
+      replicas: 1
+
     loki:
       auth_enabled: false
+
       server:
         log_level: info
         http_listen_port: 3100
         grpc_listen_port: 9095
 
-      memberlist:
-        join_members: [ "loki-memberlist" ]
+      #      memberlist:
+      #        join_members: [ "loki-memberlist" ]
 
       limits_config:
         retention_period: 60d
@@ -57,9 +61,9 @@ spec:
       commonConfig:
         path_prefix: /var/loki
         replication_factor: 1
-        ring:
-          kvstore:
-            store: inmemory
+#        ring:
+#          kvstore:
+#            store: inmemory
       storage:
         type: filesystem
         filesystem:
