chore(n8n): attempt at fixing postgresql not connecting

--- a/cluster/apps/default/n8n/secrets.enc.yaml
+++ b/cluster/apps/default/n8n/secrets.enc.yaml
@@ -4,32 +4,32 @@ metadata:
     name: n8n-secrets
     namespace: default
 stringData:
-    secret.json: ENC[AES256_GCM,data:HmLINbewBf8XJTHjFnA0m+fLZFQVp/BcOeJVtedWnSGemHhGzV6C/xfUgWCuwsdxEUFBPxh+aZroheM5Tp8I/esPQPCWwjiPNNFTAwIShHfP4rOO2wQn7McLdyGPutC3VV+D9T9jKpXWdWPXaJyfPv9w3nCGnNEiBY8vviDBxQP3RBF7UUvaVyX3uSFR1arv2S4nW8N+s6FECJxQ6vLMlUkYJJSf1hirTOKkgKgz/OJJenHCHJbA2IHiO2D+l4pACSmgL3ykh9vOWANyYWkPSMR5Vg==,iv:XHYdcvPv4vTZrBPiYvBNnJDXoEKPUZuKAxrwpRsqHfA=,tag:dgi4VgXfsjMVPAB0B9WZLA==,type:str]
+    secret.json: ENC[AES256_GCM,data:9vMV84WV4dh7x95CBIqS7GCDQUVL+nLLjbhf2AgyA+HfYynLbf54YQOkko7X33v6LyOnOzNb1tz2Cp9ka7kjBAu2H2VfzhdxYqmA+60zE+Y1ZtMo/+yOCGPYRchXUAQ3HWMuExpv1cY5PmcataL8jhsvDchA5LDsYgpJMO10C7gN+fWGW/+KujjbZ9GQ/mxo9YK7u5zAMlN//XFUAiOSLrQIBlVJuk+RDmeh6hk4DrzY64iQS6EDw35aoP41tmxl8rAZqwX2hQCgLTafLbfZIjw=,iv:y2ITfPzoFvSzVLYvdq53fnokWYT6zyNc+3o8HVTwpnw=,tag:DoMKP+i1xb1qZfjomM7nXA==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-09-28T12:46:21Z"
-    mac: ENC[AES256_GCM,data:3Ol5fuVpyggA0zHHiJCe0p1gG5iEgbUPTG8Twf9/nbVuIekWBn+h/vKoyJdtCUn96bF3WGgp5zZEJi19mi7Nwf0wgISVawmhE7Un3XXbGRc8f159bDsmD7NUatCXcOu3NgIPgwqwiF5cDVkYQiG6gMDfYra2MwWpMVIpu9RHEMg=,iv:TB3oQNhWyvZUfypkCnp6JbIF/2BnVCXylJMdJ8O0J0g=,tag:8SgubYTTOlkC0QpJo4rDGQ==,type:str]
+    lastmodified: "2023-09-28T12:59:59Z"
+    mac: ENC[AES256_GCM,data:0hFt0spuD30zKIVIGtrVDTM2XRgU5z2BvI4pEd1doI1UNn7kJE3gyvYuYa3kdMRHeZ3HAC1FNOJWkK8hbrmEPfmavWSHIu6gq2XX73nTji0nGutEIQnppoxY/vRIvd/Q2dyncCAZHTFAMQSasT5/P9Oc+08o5yHRcFduA39g+0Y=,iv:luXeJ/2NnCFXOZQtJfDLRh0uI8t/2CimYQQ0eDtiX4I=,tag:AL8P7xKERBWBMGldkag1hA==,type:str]
     pgp:
-        - created_at: "2023-09-28T12:46:21Z"
+        - created_at: "2023-09-28T12:59:59Z"
           enc: |-
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQwAmUbssbv4It0/hxWTsgwVF1djYTJUMDqb+PRfmdWo5zpV
-            Iw4ShTFCpgPQrjhFpNiG3h3kKPSIzN/HKxxr74HV4CsSwRaAYp7bupJSMPmdooHz
-            FhoqkqHNvw+KPNfVFym3G5JvCNrU5FWETaVnUjSuy4J940PZlWZqJn9A/THYhQk+
-            5VPVtDIOqBvwCwpzWoCCAXHBZyng79pqWeL9YfVO0ZT8voqMLpTWz/usRRvXaTm0
-            4b6HGHVcUVNRedzFM+ArhrupoMVR9Acc5QO/TxRzV1hJPVyR2ndsQj7qe7bLfTRc
-            nZyaDHgZwE8XRu+Tfz0Z5nnPcK1aBmo9KgtD67ljjATxqNpDi1k6js87WptPDx+G
-            wSbRbgY8wjM91cD6GuDYpXBzlcaS7IQtJtIkR0aq2kBxFa9dnPPO894aQXoQY7MN
-            QvjMK5QcHNmMRWWHdKtVj7BgyGNvR2n/2FqKGVMWFzNOOFJEus2rkaLjBer5aI1h
-            25xhe8yMclj8UgAUuEdk0l4B35/rg3bPQU6HfnGswFOhM1lx/P+uXUG362b11u6Q
-            LPny6sUWJyT8gpQGO09ewETrlZsfvO1UR5uDk9cwUxocqbs+P1t6HOOZvAj4qKIT
-            mwKMReq556eiAW/7EoD+
-            =n3ce
+            hQGMA71EESEn7N2iAQv9FMdBSpNQzY+LCrnpeyOev2aH2MW1HDNi9h+jW7C3H+e2
+            NRK32nC0NyuD+aZI9q8Y7BNaQVLiHN+YNpr9V8Jj+5fy8xRsXcZQXJVnTi/91csl
+            l4aLYRhL2/vYavT1J1tFn3bWLOrFYCguRTpU9kwd8Pq+nJ3wcd4V3sCBaq83SRlh
+            UBa7pPotNFJQQwQQvsf9UvSN+cm+hu4L3SyXW0wsFF4EkWVoEjVZ0XgS2WuAlnbQ
+            UE28tXnalbkTN+dFgLoe5/8Tbp73fQkxPJGnkO28cJMQ/pPVL2ZOZWltxB8c1W3m
+            VOGR4U/ZBsnSgAylOXx3Nr9hNuM991w69vYgeS3n6uDcYFvG7UTD9JrJ9Anlq/ME
+            66Zh139bRaG+meeEuyfXUvGcJuQ4e0Q62UW7M3H+1kIx7xQP14UvE/XfEuKDLO24
+            1UUjg6UU3kn0Rgq12c9rkb8URE3V9CqR2DwQjYaOYinZcwgFdh+XDllg/cXVHx9j
+            3kVA2rMBF1lXMbGGpOhL0l4Blj90wwLVUBaKGQmdJUyzOboiFYUDDuBLcaYUkGQt
+            qd2MeVzY4HDytYGxI7lf9VB4QS/3WQ2lPa0WUH13DXmCjl6ihAeVNeKOClYvWOkj
+            /fvPxTEDDZOPdbFN19GW
+            =GNxe
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
