--- a/cluster/apps/default/n8n/n8n-helm-release.yaml
+++ b/cluster/apps/default/n8n/n8n-helm-release.yaml
@@ -32,6 +32,11 @@ spec:
     # Set additional environment variables on the Deployment
     replicaCount: 1
 
+    image:
+      repository: n8nio/n8n
+      pullPolicy: IfNotPresent
+      tag: v1.8.2
+
     deploymentStrategy:
       type: "Recreate"
 
@@ -40,10 +45,10 @@ spec:
       enabled: true
       className: "nginx"
       annotations:
-        external-dns/is-public: "true"
-        external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
         nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.networking.svc.cluster.local/oauth2/auth"
         nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/oauth2/sign_in"
+        external-dns/is-public: "true"
+        external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
       hosts:
         - host: "n8n.${SECRET_DOMAIN}"
           paths:
