fix(n8n): fix wrong tag version used

--- a/cluster/apps/default/n8n/n8n-helm-release.yaml
+++ b/cluster/apps/default/n8n/n8n-helm-release.yaml
@@ -35,7 +35,7 @@ spec:
     image:
       repository: n8nio/n8n
       pullPolicy: IfNotPresent
-      tag: v1.8.2
+      tag: 1.8.2
 
     deploymentStrategy:
       type: "Recreate"
