--- a/cluster/apps/default/n8n/n8n-helm-release.yaml
+++ b/cluster/apps/default/n8n/n8n-helm-release.yaml
@@ -37,8 +37,8 @@ spec:
       hosts:
         - host: "n8n.${SECRET_DOMAIN}"
           paths:
-            - path: /
-              pathType: Prefix
+            - pathType: Prefix
+              path: /
       tls:
         - hosts:
             - "n8n.${SECRET_DOMAIN}"
