chore(n8n): yet another attempt at making ingress to work

--- a/cluster/apps/default/n8n/n8n-helm-release.yaml
+++ b/cluster/apps/default/n8n/n8n-helm-release.yaml
@@ -37,8 +37,8 @@ spec:
       hosts:
         - host: "n8n.${SECRET_DOMAIN}"
           paths:
-            - pathType: Prefix
-              path: /
+            - path: /
+
       tls:
         - hosts:
             - "n8n.${SECRET_DOMAIN}"
