--- a/cluster/apps/default/n8n/secrets.enc.yaml
+++ b/cluster/apps/default/n8n/secrets.enc.yaml
@@ -4,36 +4,39 @@ metadata:
     name: n8n-secrets
     namespace: default
 stringData:
-    DB_POSTGRESDB_DATABASE: ENC[AES256_GCM,data:hUjwmjU9CCQ=,iv:opuCU2Y3K0y2KflOpyfPQFW1dD0dDkepwX3oTEE434Y=,tag:ivk8n6uoHkIvHDZhwuR4Bg==,type:str]
-    DB_POSTGRESDB_HOST: ENC[AES256_GCM,data:NgJZ9a5IaEsbplMbHKpo8e1oySVO2Bfw9vC+IqK72KAx12kusxmDVw==,iv:n5hZfDx4j2naFYlg/8Du4UUoRcS8U2KjLB4r0UArx28=,tag:8pXuFRiLL/U5owToxMi4Dw==,type:str]
-    DB_POSTGRESDB_PASSWORD: ENC[AES256_GCM,data:CndlSh1MBEnUtPAMN6ru7oLZuqGseM9VXyabuRmb,iv:eN9/v9dMQBzKLQQJIPvLNj7lqAMgqOZGFSE4mE2zOZ4=,tag:KFAE7TCiFbLMGQzCC2iSCQ==,type:str]
-    DB_POSTGRESDB_USER: ENC[AES256_GCM,data:gEHE,iv:b230kyQgo3UuivhHi/k8qisXoFY40j5urW66aplsyIk=,tag:kLDxZ8vnJWHCKHCszuzoCA==,type:str]
-    DB_POSTGRESDB_SCHEMA: ENC[AES256_GCM,data:gjPCPkC2,iv:ylDy/RjwukR48Rp0ta/zRTD3tUCeA0OtoWvWgBOK8bs=,tag:+ozdL+xk5GRqMlK6St54hQ==,type:str]
+    DB_POSTGRESDB_DATABASE: ENC[AES256_GCM,data:vji5t6Qmxss=,iv:Wj+PLJSMzvOp868E177XGjPI4pH/ow8Crr/Bsfna1fY=,tag:VpaumrPSfes5nLXcQKHIAQ==,type:str]
+    DB_POSTGRESDB_HOST: ENC[AES256_GCM,data:2kY+iLN8aais4CHoH19xprKyf/ZWEImfS57XztqCxo1XtzenEAG8/Q==,iv:45p6Bk5shhuNsHf1b61KEJ+Rv1fDw0lPsgaj3TjyEuM=,tag:oiObesVGKyZhKjpdtbfoJg==,type:str]
+    DB_POSTGRESDB_PASSWORD: ENC[AES256_GCM,data:NnGHeJQaeUF2KrN4BfrKhwx1YAoGnx10ABTgrWDL,iv:P58ERJvpfIoV1YEdHjaqCeyMiHVhZBEoEMZUgOMxLfg=,tag:PTtdTC/j05rCinyhAZbxXg==,type:str]
+    DB_POSTGRESDB_USER: ENC[AES256_GCM,data:FGLe,iv:scQZghgliQPp7/XdS+/EJcmvj25tRjXCYTMQqEV7A1M=,tag:7FqTWYB5qCoi9mYUPKlBEg==,type:str]
+    DB_POSTGRESDB_SCHEMA: ENC[AES256_GCM,data:DgNcaF+X,iv:zJcaj0ZvM+x19FXus2ljFLCLSnJldD75vxvaZwqQiXE=,tag:pRfnzMyCyOSNpyZIZ7+NZg==,type:str]
+    N8N_HOST: ENC[AES256_GCM,data:Fi8JM3ZXzTWQNRb191s=,iv:LuaBXvMYIlH1zYa119mWYkI+MYnMFx+8xFe66QgImdk=,tag:1UkjiU/b9QOPIAyFMeieJQ==,type:str]
+    N8N_PORT: ENC[AES256_GCM,data:4W4Y,iv:ATDzGdSsB+kDRX1XeMyKq+XQJrYoBQJ/SiJxTA7VLyo=,tag:yTddkBzZCprAzAPmRKawAw==,type:int]
+    N8N_PROTOCOL: ENC[AES256_GCM,data:FUgUpu8=,iv:t20UmrX3DR06V1nAjjR+lJLILdQv24Wpse9HQRlmBO0=,tag:lOyHmlxom901/D3L1cRzTA==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-09-28T14:04:10Z"
-    mac: ENC[AES256_GCM,data:9YpZ+i9gYV8HiAyqa8YuUHe+qcV3GjFs9GxCRYBtTPwZ8cPMCrmpyjApN3FmOjnRfXk08DpN0okj9TaXhc6OX2DczkKVucUYUlWHnk8O3EnBXU0SiAAYqyxOFMosks90KiAjrdiqJs13hbzYBfaLJ3cVexG0O3EOLm/u+9+TT8Y=,iv:Sk/5/7u9d221886zTh+VjaOVQ3vmByhb0JuM3VP2D78=,tag:BoQvm7IoM8eqx4TaZcXY8g==,type:str]
+    lastmodified: "2023-10-05T12:40:18Z"
+    mac: ENC[AES256_GCM,data:5mVGSsccCbmgr85f/48U7I/wrb/EoA32Kdzpw+yGaH5Fi6Z8fEEAFEx9MaYbLnR5a9yeG8hebAaCYBrrlcKvOU6vkC2emEeLWMKZUuthOOFAQbAIwoVUFllz7MRXkfosdjNqzDX+WFq1JWMlu7dv8TTxoAv/mNFmF0dp4DAPg4Y=,iv:HlVOA+mh4RmHcY8kpcyl2RdgR7rkdXfcXIsBnwE/vNU=,tag:7ogM33bJcllEcM5TNKe7Jw==,type:str]
     pgp:
-        - created_at: "2023-09-28T14:04:10Z"
+        - created_at: "2023-10-05T12:40:18Z"
           enc: |-
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv/VRN2jCTBAAUXp08tunJdUEjufbM329RJhmHJ5fxXLr+r
-            CohPcapKpccUguCanS+pHCLY7KyEwgI9/fzMhUY9pYlEP3meDVno/yjtG4x9RIz+
-            pmoH5o/O5Hyi/+0XJ4qUn/9BHh8e20e9qX4mFLJzGQS1rgZMj8LkEFFyOvvN74VF
-            shc9/jNpOY2AVXJqTerrJxyHHGMx00hXDkodUr82WCSFc1UmYdYJD+UYJltZrKG0
-            P/L8ZeLQRaAY8Bve0sPEEY/wfCZS/rWJtm4pFmlo9UI1EPuZooywkY8w9hfG/Z/j
-            g3VhCdzn/59qnYB0DsU3jNyLz9XD20uoVibkXE48GrY5a4boY2X6/1ltmMoY0Hfi
-            pQmyt6F3W+w7hekzv93G2VQu2G9qDxirwgXmHnKxVtLdPXbfGxsC4OfnNsz0N5Lk
-            LFI8cqdNKdFrleG2pMNWXD6qbamr8uiJi3h0B28T+B/Ad4PiONvek1aEyTBPkR/Z
-            NBaW2TY2pcxyGlgTrkG30lwBxVLfAMx3tNKTrXKdA4ixEGSCXsYTYvtpoh+beodI
-            AcYytwbVbIAHUbtVpTD9+SAd+dfurKTXKR+HKZTQt2a1W4Lz3rbCngnnVht4LF9C
-            WcliQ1OnaEkZ+tUNMQ==
-            =sNrM
+            hQGMA71EESEn7N2iAQv/Y03iK7RDzzcVD0cAiCdj3P0hwHvMymLcybofTuixjzEh
+            iPQWj2vqSCYXmG1YZcWwkp8n81m4arGq7X55Bn2K7GRkeXP2pFI3+2sB+QAhL58m
+            5Tl7x+TrIH1yAsRqvaAoe5FRDWu5jCvso1uRliRTfmRMEOtYNN5pHfUthQKJAFzQ
+            7rv++99sJ2X1+g1Nf2QrQ1ZFJxiaXgsb9tKqGWfNIGg9TRS62GB3Y55a2xqM41Qx
+            LKSFqq282bdByOFoSS0FZaKFl6cF/GxGK8HZjqnggUJ2x87E3AXLOg605QZFWvvK
+            Hpsauf/tcXFF+EVRXu6aU2MtyBmRBYtLB1DEaipuGcob0dnG5hoe2MK5w5hutjHY
+            90V54UFMnqxcQSaHfuiWfD7/iCx2eZtuLtam1ySpcFjQf1+zomeTmUwVTCIIXJns
+            N36z8jF5KYGArhXRUc1VTg3mpMzVaJSOqtdllX23+zmhowtELE3xkc31iAKHR2dj
+            idRx5nVsIpuhIdv17MrJ0l4BHueUxq0nUnJvx9+BCB295KyErfM+jatUr4K1scPs
+            nbQtthe+WUXV1hkwu9115ERW7BozZylhfgZsAmFHE7KyODuX+OsRthk0lQ5Hyov+
+            C9AJPYNIoHANVaRkBhNs
+            =WL2H
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
