chore(n8n): fix secret containing int instead of string

--- a/cluster/apps/default/n8n/secrets.enc.yaml
+++ b/cluster/apps/default/n8n/secrets.enc.yaml
@@ -4,39 +4,39 @@ metadata:
     name: n8n-secrets
     namespace: default
 stringData:
-    DB_POSTGRESDB_DATABASE: ENC[AES256_GCM,data:vji5t6Qmxss=,iv:Wj+PLJSMzvOp868E177XGjPI4pH/ow8Crr/Bsfna1fY=,tag:VpaumrPSfes5nLXcQKHIAQ==,type:str]
-    DB_POSTGRESDB_HOST: ENC[AES256_GCM,data:2kY+iLN8aais4CHoH19xprKyf/ZWEImfS57XztqCxo1XtzenEAG8/Q==,iv:45p6Bk5shhuNsHf1b61KEJ+Rv1fDw0lPsgaj3TjyEuM=,tag:oiObesVGKyZhKjpdtbfoJg==,type:str]
-    DB_POSTGRESDB_PASSWORD: ENC[AES256_GCM,data:NnGHeJQaeUF2KrN4BfrKhwx1YAoGnx10ABTgrWDL,iv:P58ERJvpfIoV1YEdHjaqCeyMiHVhZBEoEMZUgOMxLfg=,tag:PTtdTC/j05rCinyhAZbxXg==,type:str]
-    DB_POSTGRESDB_USER: ENC[AES256_GCM,data:FGLe,iv:scQZghgliQPp7/XdS+/EJcmvj25tRjXCYTMQqEV7A1M=,tag:7FqTWYB5qCoi9mYUPKlBEg==,type:str]
-    DB_POSTGRESDB_SCHEMA: ENC[AES256_GCM,data:DgNcaF+X,iv:zJcaj0ZvM+x19FXus2ljFLCLSnJldD75vxvaZwqQiXE=,tag:pRfnzMyCyOSNpyZIZ7+NZg==,type:str]
-    N8N_HOST: ENC[AES256_GCM,data:Fi8JM3ZXzTWQNRb191s=,iv:LuaBXvMYIlH1zYa119mWYkI+MYnMFx+8xFe66QgImdk=,tag:1UkjiU/b9QOPIAyFMeieJQ==,type:str]
-    N8N_PORT: ENC[AES256_GCM,data:4W4Y,iv:ATDzGdSsB+kDRX1XeMyKq+XQJrYoBQJ/SiJxTA7VLyo=,tag:yTddkBzZCprAzAPmRKawAw==,type:int]
-    N8N_PROTOCOL: ENC[AES256_GCM,data:FUgUpu8=,iv:t20UmrX3DR06V1nAjjR+lJLILdQv24Wpse9HQRlmBO0=,tag:lOyHmlxom901/D3L1cRzTA==,type:str]
+    DB_POSTGRESDB_DATABASE: ENC[AES256_GCM,data:ZW4j5Jo2HX8=,iv:QCkW09PDiawSZ2xA90nX/gP5di4cUdfHQUYaFbnmi3g=,tag:D6hcPazdHiSywUoxGAeT5Q==,type:str]
+    DB_POSTGRESDB_HOST: ENC[AES256_GCM,data:WmQaU00gXaQELVlJ1/IKO6okNDWln5+bVOWXA5kI3qpCfBq82Bw5Ew==,iv:jOUFgN/U4YCI7M/TWi5fYtDOO9tkzpolKpDOyN0HalM=,tag:OkWA457GrrgFounuGGPz+g==,type:str]
+    DB_POSTGRESDB_PASSWORD: ENC[AES256_GCM,data:LIHGa/WCA9WMzr9DvAqLPD0rBkqDMVYx1JRNz+n6,iv:k00cBNh57g/TmJCogsa+EYoSvl7vZzK47cR857bFEVg=,tag:429tZk1FWvos3+Et1sFNGA==,type:str]
+    DB_POSTGRESDB_USER: ENC[AES256_GCM,data:RUXd,iv:sq6nwI0h9ym/8PjfODKusiNmuToiqniHDBQMTg+4ecw=,tag:qqZHFXLmAM58uq+ry5iHhQ==,type:str]
+    DB_POSTGRESDB_SCHEMA: ENC[AES256_GCM,data:3AXjoQj7,iv:ZWB84+YA7GxrGusJ081pvnT4ac88rKAQPM84dQUImlA=,tag:IaWX675mGaN2lfBVdY333Q==,type:str]
+    N8N_HOST: ENC[AES256_GCM,data:LIdCUx3VgJcji3Sly58=,iv:3eZs7w+OrgG4R6DM9anBfUdxALp/ciyIULWE+ORhgW0=,tag:2j7CeGJQ1v4S8YKFQkFGUw==,type:str]
+    N8N_PORT: ENC[AES256_GCM,data:a20M,iv:U2wvz6hTd8pWt2SBVnKVZp0pg22u71y97zMT+EHHaws=,tag:Wel97hJ6ouPxs18ButNE1A==,type:str]
+    N8N_PROTOCOL: ENC[AES256_GCM,data:nxZdVH8=,iv:zHxkjYs68bu8E8d6Gz1F7M8BbtyOVfSX0h5aPEYWrlQ=,tag:m/FL8yKThjoINwSuYyHk7g==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-10-05T12:40:18Z"
-    mac: ENC[AES256_GCM,data:5mVGSsccCbmgr85f/48U7I/wrb/EoA32Kdzpw+yGaH5Fi6Z8fEEAFEx9MaYbLnR5a9yeG8hebAaCYBrrlcKvOU6vkC2emEeLWMKZUuthOOFAQbAIwoVUFllz7MRXkfosdjNqzDX+WFq1JWMlu7dv8TTxoAv/mNFmF0dp4DAPg4Y=,iv:HlVOA+mh4RmHcY8kpcyl2RdgR7rkdXfcXIsBnwE/vNU=,tag:7ogM33bJcllEcM5TNKe7Jw==,type:str]
+    lastmodified: "2023-10-05T12:59:26Z"
+    mac: ENC[AES256_GCM,data:iuZHdC4/BjrFIIkX4/7RcWDSW5P+Yrldrpzs750CwmsgbmUGgpXn5yM51/+3q3qWwPGFBEb1i3SUr7GAJL59Fjtq34q18uNbK/GmaApbNpdNkc8jUSo0m8CXZLbjDqs4OCoygChCSJdbjhjT3GSfZViVSivVnqQWylcGhdNn/wY=,iv:SW69lA5Jhn1o6/PDvk87kjt76V7pYvdm4NUtrWeAOU4=,tag:QE0q5eighhH67aRrlvKxWg==,type:str]
     pgp:
-        - created_at: "2023-10-05T12:40:18Z"
+        - created_at: "2023-10-05T12:59:26Z"
           enc: |-
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv/Y03iK7RDzzcVD0cAiCdj3P0hwHvMymLcybofTuixjzEh
-            iPQWj2vqSCYXmG1YZcWwkp8n81m4arGq7X55Bn2K7GRkeXP2pFI3+2sB+QAhL58m
-            5Tl7x+TrIH1yAsRqvaAoe5FRDWu5jCvso1uRliRTfmRMEOtYNN5pHfUthQKJAFzQ
-            7rv++99sJ2X1+g1Nf2QrQ1ZFJxiaXgsb9tKqGWfNIGg9TRS62GB3Y55a2xqM41Qx
-            LKSFqq282bdByOFoSS0FZaKFl6cF/GxGK8HZjqnggUJ2x87E3AXLOg605QZFWvvK
-            Hpsauf/tcXFF+EVRXu6aU2MtyBmRBYtLB1DEaipuGcob0dnG5hoe2MK5w5hutjHY
-            90V54UFMnqxcQSaHfuiWfD7/iCx2eZtuLtam1ySpcFjQf1+zomeTmUwVTCIIXJns
-            N36z8jF5KYGArhXRUc1VTg3mpMzVaJSOqtdllX23+zmhowtELE3xkc31iAKHR2dj
-            idRx5nVsIpuhIdv17MrJ0l4BHueUxq0nUnJvx9+BCB295KyErfM+jatUr4K1scPs
-            nbQtthe+WUXV1hkwu9115ERW7BozZylhfgZsAmFHE7KyODuX+OsRthk0lQ5Hyov+
-            C9AJPYNIoHANVaRkBhNs
-            =WL2H
+            hQGMA71EESEn7N2iAQv+PefxDEeum+VXfPxNAW4TbHFSK/2Quzo1NPzIOh7jv4ha
+            HsarLeten3KtFH7M6eNJDMifUvcibSER40UAXCROqrcJLF5bEq7Yy5+v/fQrcxK7
+            adNmoAhm5NRbutouGEJvChYNHazscIerwELif3+pj/sN4E/CvEUUGzdqWh9ygAub
+            1HgZsF1KxezVAakKgSl5lAgOnNMqUrgscwA5sKjX2gxWCP1VT8Ho8qYwfD2Os/hj
+            aYKgxgVUk2Zc+rLhUOVWLA3GXu8jOZ8gy7UH1G6Pr5/TidBs9qNvPSQW2zAsugFV
+            sS/HgkEkbu+Bdn8L8Ivlkue6hYbAhRoKi4h2MCXkNWvOCIQbxKi62+/RJfj5QRBq
+            vwEoVufzeLwegkkM90ZMYf3PEefHJqPU+wW/Cy2487hzPjeQ5QByrP4fw+zxP0pd
+            vAHJl14a2x3pRz7FZKRLVf7PTCN5myLOOGI8+Yrq4gKjYBzkiYtHLPNvcOszHK+k
+            rEX5zvkqnTfkCm4YjkIQ0l4BYzxhSSGJPoBrXGLBPFVrckmncLQAIrd1+vVvEARL
+            wXGzZF7TolxGF6oNMP3VjCwp9ZrPCA3p/8DdZrE/G1eFu+H3SyFnLeSGTeIIfEh9
+            mYIfmTs1vZW66yj5B3Uw
+            =DjJu
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
