--- a/cluster/apps/default/n8n/secrets.enc.yaml
+++ b/cluster/apps/default/n8n/secrets.enc.yaml
@@ -4,39 +4,37 @@ metadata:
     name: n8n-secrets
     namespace: default
 stringData:
-    DB_POSTGRESDB_DATABASE: ENC[AES256_GCM,data:ZW4j5Jo2HX8=,iv:QCkW09PDiawSZ2xA90nX/gP5di4cUdfHQUYaFbnmi3g=,tag:D6hcPazdHiSywUoxGAeT5Q==,type:str]
-    DB_POSTGRESDB_HOST: ENC[AES256_GCM,data:WmQaU00gXaQELVlJ1/IKO6okNDWln5+bVOWXA5kI3qpCfBq82Bw5Ew==,iv:jOUFgN/U4YCI7M/TWi5fYtDOO9tkzpolKpDOyN0HalM=,tag:OkWA457GrrgFounuGGPz+g==,type:str]
-    DB_POSTGRESDB_PASSWORD: ENC[AES256_GCM,data:LIHGa/WCA9WMzr9DvAqLPD0rBkqDMVYx1JRNz+n6,iv:k00cBNh57g/TmJCogsa+EYoSvl7vZzK47cR857bFEVg=,tag:429tZk1FWvos3+Et1sFNGA==,type:str]
-    DB_POSTGRESDB_USER: ENC[AES256_GCM,data:RUXd,iv:sq6nwI0h9ym/8PjfODKusiNmuToiqniHDBQMTg+4ecw=,tag:qqZHFXLmAM58uq+ry5iHhQ==,type:str]
-    DB_POSTGRESDB_SCHEMA: ENC[AES256_GCM,data:3AXjoQj7,iv:ZWB84+YA7GxrGusJ081pvnT4ac88rKAQPM84dQUImlA=,tag:IaWX675mGaN2lfBVdY333Q==,type:str]
-    N8N_HOST: ENC[AES256_GCM,data:LIdCUx3VgJcji3Sly58=,iv:3eZs7w+OrgG4R6DM9anBfUdxALp/ciyIULWE+ORhgW0=,tag:2j7CeGJQ1v4S8YKFQkFGUw==,type:str]
-    N8N_PORT: ENC[AES256_GCM,data:a20M,iv:U2wvz6hTd8pWt2SBVnKVZp0pg22u71y97zMT+EHHaws=,tag:Wel97hJ6ouPxs18ButNE1A==,type:str]
-    N8N_PROTOCOL: ENC[AES256_GCM,data:nxZdVH8=,iv:zHxkjYs68bu8E8d6Gz1F7M8BbtyOVfSX0h5aPEYWrlQ=,tag:m/FL8yKThjoINwSuYyHk7g==,type:str]
+    DB_POSTGRESDB_DATABASE: ENC[AES256_GCM,data:C/Nw2HKG1ok=,iv:tTnV26zvItmWpBFt+M7wNDNTCmGezJPAcfsSmMIrpTU=,tag:wj5g9w+31Y1+mO/zDmbvgg==,type:str]
+    DB_POSTGRESDB_HOST: ENC[AES256_GCM,data:bUZmjUPv3NZeGpvNXlHl6dqk/yc3k3twEg8w2kwPMTAqXOQFI4zujA==,iv:zngiwWGZ/h6fwFQE1xA90OaTDnW6TIZ/vRdTUssCVJI=,tag:CfrtQhpAO19ZPRi4WL5K/w==,type:str]
+    DB_POSTGRESDB_PASSWORD: ENC[AES256_GCM,data:IabWP1o6LSXtQzltXRatcKuhcFpCS9MzLztXK5fA,iv:LTELYbDRZd5iF/wz9N723uxg0YMSar791FBG+shXMnE=,tag:NgXiZBS6gHY00wFqkp8ldg==,type:str]
+    DB_POSTGRESDB_USER: ENC[AES256_GCM,data:0jha,iv:qbi54pep/F8HpnjTZi7+UhLqNxjjRW/+Fu6fcNasJ60=,tag:5hcl2QijyOsnIvxWz1dJVA==,type:str]
+    DB_POSTGRESDB_SCHEMA: ENC[AES256_GCM,data:R7+cqKZ6,iv:niH1isF3BiR9MSyMGoIeUQtrvdJzliV+/0Tfw5AgWy0=,tag:sYXYZcqpql+KAkyuDda1tg==,type:str]
+    N8N_HOST: ENC[AES256_GCM,data:/XEs0MYdPF/+7K5ORuQ=,iv:TaFVFalsrVfBQG/V+2FHBvcFHApxX+Y5KExLlpNliKM=,tag:OQqmK0epS7n2+n96MI4nrg==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-10-05T12:59:26Z"
-    mac: ENC[AES256_GCM,data:iuZHdC4/BjrFIIkX4/7RcWDSW5P+Yrldrpzs750CwmsgbmUGgpXn5yM51/+3q3qWwPGFBEb1i3SUr7GAJL59Fjtq34q18uNbK/GmaApbNpdNkc8jUSo0m8CXZLbjDqs4OCoygChCSJdbjhjT3GSfZViVSivVnqQWylcGhdNn/wY=,iv:SW69lA5Jhn1o6/PDvk87kjt76V7pYvdm4NUtrWeAOU4=,tag:QE0q5eighhH67aRrlvKxWg==,type:str]
+    lastmodified: "2023-10-05T13:12:34Z"
+    mac: ENC[AES256_GCM,data:G2k4lTcA9JIBqINzVIF9tu2YjkbzYiehx78rC5IAwtFYF1iu5xs/u02qlJ3m84uapLKDj7wvPIOslj7pa2A6Qo00tT23N2GqtZsaYzGywl4R/CHau3NRgfhscGyTl8FGQvL/jYH4ziiUimjFbXMvoRCLgF/d6K4FkkbZ0FxoXsg=,iv:PhaGBF8d4CDUKceEZaJKRlm/4ysaXrv8bdLwddNoHcM=,tag:AjcVO3xfn+3W80RT85Z+nw==,type:str]
     pgp:
-        - created_at: "2023-10-05T12:59:26Z"
+        - created_at: "2023-10-05T13:12:34Z"
           enc: |-
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv+PefxDEeum+VXfPxNAW4TbHFSK/2Quzo1NPzIOh7jv4ha
-            HsarLeten3KtFH7M6eNJDMifUvcibSER40UAXCROqrcJLF5bEq7Yy5+v/fQrcxK7
-            adNmoAhm5NRbutouGEJvChYNHazscIerwELif3+pj/sN4E/CvEUUGzdqWh9ygAub
-            1HgZsF1KxezVAakKgSl5lAgOnNMqUrgscwA5sKjX2gxWCP1VT8Ho8qYwfD2Os/hj
-            aYKgxgVUk2Zc+rLhUOVWLA3GXu8jOZ8gy7UH1G6Pr5/TidBs9qNvPSQW2zAsugFV
-            sS/HgkEkbu+Bdn8L8Ivlkue6hYbAhRoKi4h2MCXkNWvOCIQbxKi62+/RJfj5QRBq
-            vwEoVufzeLwegkkM90ZMYf3PEefHJqPU+wW/Cy2487hzPjeQ5QByrP4fw+zxP0pd
-            vAHJl14a2x3pRz7FZKRLVf7PTCN5myLOOGI8+Yrq4gKjYBzkiYtHLPNvcOszHK+k
-            rEX5zvkqnTfkCm4YjkIQ0l4BYzxhSSGJPoBrXGLBPFVrckmncLQAIrd1+vVvEARL
-            wXGzZF7TolxGF6oNMP3VjCwp9ZrPCA3p/8DdZrE/G1eFu+H3SyFnLeSGTeIIfEh9
-            mYIfmTs1vZW66yj5B3Uw
-            =DjJu
+            hQGMA71EESEn7N2iAQwAmRE6FRebzND8U2TfYPnQKDmg32Rj1LcVWyBH9CK1kxp7
+            SNiqlFckIb+No+EFu9cA+cQuzkypKJigDzECmLAKFkg0EvBUjAixz8psCKU+7NcJ
+            nWYO8Gj7+2oMHP5+9Bfh4aa/Y+B4RS3oh7j7Oq6bxZDTjv5WMxwsS4oVNhMkQXFl
+            1e8nAMao5MlaZAbtpUELNxHRkQ7sVM8UBgMF6qvEIHfGsTJuDBznCnoSGTJ1chI0
+            zD3LzOCIX6HgoUj+4K7DQf4/w2BDcWp55nIMEXyUHEh+btFQi9cljJ/6XmM+FEXj
+            mZHhitW0PtEah6pxkbdw49Dv2nqV0ntBo8Uph/R/KYOFJoSkVMKmGFy+4Iiu/k1I
+            id3fWzAMj+dgjw4foviGKLcI00yPrwsmPQBVJ/pkViC1vWph1qEH7D4t+//vje19
+            tZirtcow/wxY9PByqvoAv88urJ8U8oBU1FCPAAlGMmt7m/OzkhcXuf80onaETs2O
+            h29V4iYeDvDuT5uO2N1L0lwBkaxeuZA3frynmkLwZBPHNvW8JcXJFufxL4MBuKLe
+            yeqm6Y0sI5YqNCL5COia/cr9GL4fQqtMdR5byDZxy0214SK+3lUcgrwFZzO+CpEQ
+            4pfnfp8xSXrTiNqmnw==
+            =k8vQ
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
