--- a/cluster/apps/networking/nginx/ingress-nginx-helm-release.yaml
+++ b/cluster/apps/networking/nginx/ingress-nginx-helm-release.yaml
@@ -109,8 +109,8 @@ spec:
                 secretKeyRef:
                   name: crowdsec-secrets
                   key: CROWDSEC_API_KEY
-            - name: BOUNCER_CONFIG
-              value: "/crowdsec/crowdsec-bouncer.conf"
+#            - name: BOUNCER_CONFIG
+#              value: "/crowdsec/crowdsec-bouncer.conf"
 #            - name: CAPTCHA_PROVIDER
 #              value: "recaptcha" # valid providers are recaptcha, hcaptcha, turnstile
 #            - name: SECRET_KEY
