--- a/cluster/apps/networking/nginx/ingress-nginx-helm-release.yaml
+++ b/cluster/apps/networking/nginx/ingress-nginx-helm-release.yaml
@@ -109,18 +109,18 @@ spec:
                 secretKeyRef:
                   name: crowdsec-secrets
                   key: CROWDSEC_API_KEY
-#            - name: BOUNCER_CONFIG
-#              value: "/crowdsec/crowdsec-bouncer.conf"
-#            - name: CAPTCHA_PROVIDER
-#              value: "recaptcha" # valid providers are recaptcha, hcaptcha, turnstile
+            - name: BOUNCER_CONFIG
+              value: "/crowdsec/crowdsec-bouncer.conf"
+            - name: CAPTCHA_PROVIDER
+              value: "recaptcha" # valid providers are recaptcha, hcaptcha, turnstile
 #            - name: SECRET_KEY
 #              value: "<your-captcha-secret-key>" # If you want captcha support otherwise remove this ENV VAR
 #            - name: SITE_KEY
 #              value: "<your-captcha-site-key>" # If you want captcha support otherwise remove this ENV VAR
             - name: BAN_TEMPLATE_PATH
               value: /etc/nginx/lua/plugins/crowdsec/templates/ban.html
-#            - name: CAPTCHA_TEMPLATE_PATH
-#              value: /etc/nginx/lua/plugins/crowdsec/templates/captcha.html
+            - name: CAPTCHA_TEMPLATE_PATH
+              value: /etc/nginx/lua/plugins/crowdsec/templates/captcha.html
           command: [ 'sh', '-c', "sh /docker_start.sh; mkdir -p /lua_plugins/crowdsec/; cp -R /crowdsec/* /lua_plugins/crowdsec/" ]
           volumeMounts:
             - name: crowdsec-bouncer-plugin
